--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "surfinBH/eval_pysur"]
-	path = surfinBH/eval_pysur
+	path = surfinBH/_eval_pysur/
 	url = git@bitbucket.org:vijayvarma392/eval_pysur.git
