--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "surfinBH/_eval_pysur"]
 	path = surfinBH/_eval_pysur
-	url = git@bitbucket.org:vijayvarma392/eval_pysur.git
+	url = https://vijayvarma392@bitbucket.org/vijayvarma392/eval_pysur.git
