--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
   - "2.7"
-  - "3.3"
+  #- "3.3"
 cache: pip
 before_install:
+  - sudo apt-get update
   - sudo apt-get install -y wget
 install:
   - pip install -r requirements.txt
@@ -11,7 +12,5 @@ install:
 script:
   - py.test
 addons:
-  apt:
-    update: true
   ssh_known_hosts:
       - bitbucket.org
