--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 cache: pip
 install:
   - pip install .
+  - cd; python -c "import surfinBH; surfinBH.DownloadData()"; cd -
 script:
   - py.test
 addons:
