--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
   - "3.6"
 cache: pip
 before_install:
-  - pip install jupyter
+  - pip install jupyter>=1.0.0
+  - pip install jupyter_client>=5.1
+  - pip install nbconvert>=5.2.1
+  - pip install nbformat>=4.4.0
 install:
   - pip install .
 script:
