Add NRSur7dq4Remnant model

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist
 # those links.
 /example_3dq8.ipynb
 /example_7dq2.ipynb
+/example_7dq4.ipynb
 
 # outdir of test/smoothness_tests.py
 /smoothness_tests
