--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
   - "3.6"
 cache: pip
+before_install:
+  - sudo apt-get install -y libgsl-dev
 install:
   - pip install .
 script:
