Remove NRSur7dq2 from requirements

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 cache: pip
 before_install:
   - sudo apt-get install -y libgsl-dev
+  - pip install NRSur7dq2
 install:
   - pip install .
 script:
