Make sure to get submodules when checking out in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       # Setup Python (faster than using Python container)
       - name: Setup Python
