--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,20 @@
-name: PyTest
-on: push
+name: build
+on:
+  push:
+  schedule:
+    - cron: "0 12 * * 1"
+
+
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+  build:
+
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      max-parallel: 4
+      matrix:
+        os: [macos-latest, ubuntu-latest]
+        python-version: ['3.9']
 
     steps:
       - name: Check out repository code
@@ -11,22 +22,25 @@ jobs:
         with:
           submodules: 'true'
 
-      # Setup Python (faster than using Python container)
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - name: Set up miniconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: "3"
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        shell: bash -l {0}
+        run: |
+          conda install gsl
+          pip install pytest numpy scipy h5py
+          pip install NRSur7dq2
 
       - name: Install pipenv
+        shell: bash -l {0}
         run: |
           pip install .
 
-      - name: Install dependencies
-        run: |
-          pip install pytest
-          sudo apt-get install -y libgsl-dev
-          pip install NRSur7dq2
-
       - name: Run test suite
+        shell: bash -l {0}
         run: |
           py.test
