--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda install gsl
-          pip install pytest nbconvert
+          pip install pytest numpy nbconvert
           pip install NRSur7dq2
 
       - name: Install pipenv
