--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "surfinBH/_eval_pysur"]
 	path = surfinBH/_eval_pysur
-	url = https://github.com/sxs-collaboration/eval_pysur.git
+	url = git@github.com:sxs-collaboration/eval_pysur.git
